name:                lab03
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/SilverSylvester/lab03#readme
license:             BSD3
license-file:        LICENSE
author:              Conor Reynolds
maintainer:          reynolds.conor@gmail.com
copyright:           2016 Conor Reynolds
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable lab03
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror -O2 -threaded
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
